--- a/Game/index.html
+++ b/Game/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Game/styes/index.css">
-    <script src="/Game/scripts/main.js"></script>
+    
     <script src="/Game/vendors/three.min.js"></script>
+    <script src="/Game/scripts/main.js"></script>
     <script src="/Game/scripts/game.js"></script>
+    <script src="/Game/scripts/lerp.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="info">
+        <div id="health"></div>
+        <div id="score"></div>
+    </div>
    
 </body>
 </html>
