--- a/Game/index.html
+++ b/Game/index.html
@@ -14,9 +14,30 @@
 </head>
 <body>
     <div id="info">
-        <div id="health"></div>
-        <div id="score"></div>
+        <div id="title">jugador 1</div>
+        <div class="divider"></div>
+        <div id="score-row">Score: <div id="score"></div></div>
+        <div id="distance-row">Distance: <div id="distance"></div></div>
+        <div class="divider"></div>
+        <div>Health: </div>
+        <input id="health" type="range" min="0" max="100" disabled>
     </div>
-   
+   <div id="intro-panel">
+       <div id="intro-column">
+            <div id="intro-title">Hyperspeed</div>
+            <button id="start-button">Start</button>
+       </div>
+   </div>
+
+   <div id="game-over-panel">
+        <div id="game-over-column">
+            <div id="game-over-title">Game over!</div>
+            <div id="game-over-score-row">Score: <div id="game-over-score"></div></div>
+            <div id="game-over-distance-row">Distance: <div id="game-over-distance"></div></div>
+            <button id="replay-button">Replay</button>
+        </div>
+
+    </div>
+
 </body>
 </html>
